--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
-    "prepare": "husky"
+    "prepare": "husky",
+    "serve": "npm run dev"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
