--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     ]
   },
   "dependencies": {
+    "dayjs": "^1.11.11",
     "pinia": "^2.1.7",
+    "unocss": "^0.60.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
@@ -72,9 +74,11 @@
     "jsdom": "^24.0.0",
     "lint-staged": "^15.2.2",
     "npm-run-all2": "^6.1.2",
+    "pkg-types": "^1.1.1",
     "prettier": "^3.2.5",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
+    "vite-plugin-mock": "^3.0.2",
     "vite-plugin-vue-devtools": "^7.0.25",
     "vitest": "^1.4.0",
     "vue-tsc": "^2.0.11"
