--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@
 
 
 # 端口号
-VITE_PORT=3100
+VITE_PORT = 3100
 # 网站标题
-VITE_GLOB_APP_TITLE=vben admin
+VITE_GLOB_APP_TITLE = vben admin
 # 简称，用于配置文件名字 不要出现空格、数字开头等特殊字符
-VITE_GLOB_APP_SHORT_NAME=vben_admin
+VITE_GLOB_APP_SHORT_NAME = vben_admin
