--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@ coverage
 /cypress/videos/
 /cypress/screenshots/
 
+auto-imports.d.ts
+components.d.ts
+.eslintrc-auto-import.json
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
