--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 NODE_ENV = 'development'
-VITE_APP_TITLE = 'dev-project'
+VITE_APP_TITLE = '数字驾驶舱城管专题'
 VITE_SERVE = https://cgj.jscz.org.cn
 VITE_REDIRECT_URL = 'https://cgj.jscz.org.cn/sspgzh/#/'
 VITE_APP_BASE_API = '/api'
@@ -9,4 +9,19 @@ VITE_APP_TEST_TOKEN = "JRuiojNEfWZlC+OvKxhUR2Av7a9bYM8Iuzf2LLiF6V+ow8YBKyMnKJaXq
 VITE_ENABLE_ERUDA = false
 
 VITE_APP_MOCK = true
+
+# 是否删除debugger
+VITE_DROP_DEBUGGER = false
+
+# 是否删除console.log
+VITE_DROP_CONSOLE = false
+
+# 是否sourcemap
+VITE_SOURCEMAP = true
+
+# 打包路径
+VITE_BASE_PATH = /
+
+# 输出路径
+VITE_OUT_DIR = dist
 
