--- a/.env.production
+++ b/.env.production
@@ -1,11 +1,20 @@
 NODE_ENV = 'production'
-VITE_APP_TITLE = 'pro-project'
+VITE_APP_TITLE = '数字驾驶舱城管专题'
 VITE_SERVE = https://cgj.jscz.org.cn
 VITE_REDIRECT_URL = 'https://cgj.jscz.org.cn/sspgzh/#/'
 VITE_APP_BASE_API = '/prod-api'
 
-# 生产环境是否启用 cdn
-VITE_CDN_DEPS = false
+# 是否删除debugger
+VITE_DROP_DEBUGGER = true
 
-VITE_APP_OUT_DIR = dist
+# 是否删除console.log
+VITE_DROP_CONSOLE = true
 
+# 是否sourcemap
+VITE_SOURCEMAP = false
+
+# 打包路径
+VITE_BASE_PATH = /
+
+# 输出路径
+VITE_OUT_DIR = dist-prod
