--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
+    "clean": "npx rimraf node_modules",
+    "clean:cache": "npx rimraf node_modules/.cache",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write src/",
@@ -40,6 +42,7 @@
     "vue-dompurify-html": "^5.1.0",
     "vue-i18n": "^10.0.4",
     "vue-router": "^4.4.5",
+    "vue-types": "^5.1.3",
     "web-storage-cache": "^1.1.1"
   },
   "devDependencies": {
@@ -51,9 +54,11 @@
     "@types/node": "^20.12.11",
     "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-vue": "^4.4.1",
+    "@vitejs/plugin-vue-jsx": "^4.0.1",
     "@vue/eslint-config-prettier": "^10.0.0",
     "@vue/eslint-config-typescript": "^14.1.0",
     "@vue/tsconfig": "^0.5.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.8.0",
     "eslint-define-config": "^2.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -65,21 +70,24 @@
     "less": "^4.2.0",
     "lint-staged": "^15.2.10",
     "mockjs": "^1.1.0",
-    "npm-run-all2": "^6.1.0",
     "prettier": "^3.2.2",
+    "rimraf": "^6.0.1",
     "sass": "^1.79.0",
     "tailwindcss": "^3.4.14",
+    "terser": "^5.36.0",
     "typescript": "~5.6.3",
     "unplugin-auto-import": "^0.17.2",
-    "unplugin-icons": "^0.19.0",
+    "unplugin-element-plus": "^0.8.0",
     "unplugin-vue-components": "^0.27.2",
-    "unplugin-vue-router": "^0.10.8",
     "vite": "^5.4.8",
     "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-mock": "^3.0.2",
-    "vite-plugin-style-import": "^2.0.0",
+    "vite-plugin-progress": "^0.0.7",
+    "vite-plugin-top-level-await": "^1.4.4",
     "vite-plugin-vue-devtools": "^7.4.4",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-tsc": "^2.1.6"
   },
   "config": {
